# rta01

./: CMakeLists.txt
lab2/: box.frag  box.vert  lab2.cpp  manta.cpp
lab2/render/: shader.cpp  shader.h  texture.cpp  texture.h
meshes/: atmosphere.mtl  box.mtl  curve.mtl  earth.mtl  gem.mtl  hills.mtl  ingot.mtl  moon.mtl  plane.mtl  sphere.mtl  twist.mtl  unit_sphere.mtl  ww plane.mtl  ww_plane.mtl  ww_plane_interior.mtl
report/: atmos.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  refs.bib  rta03_report_timon_sommer.aux  rta03_report_timon_sommer.bbl  rta03_report_timon_sommer.blg  rta03_report_timon_sommer.fdb_latexmk  rta03_report_timon_sommer.fls  rta03_report_timon_sommer.out  rta03_report_timon_sommer.run.xml  rta03_report_timon_sommer.tex
shaders/: atmosphere.frag  atmosphere.vert  base.frag  base.vert  baseVert.glsl  phongFrag.glsl  sun.frag  sun.vert
src/: main.cpp
